Fase 1 - Fundamentos Sistemas WEB

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
     <!-- RODAPÉ -->
     <footer>
-        <p>&copy; 2025 SuperMercado Web - Projeto Acadêmico</p>
-        <p>Contato: (11) 98765-4321</p>
+        <p>&copy; 2025 SuperMercado Web - Fase 1</p>
+        <p>Contato: (16) xxxxx-xxxx</p>
         <p>Disciplina: Fundamentos de Sistemas Web</p>
     </footer>
 </body>
